Bugfix and search added
- search friends in a sidebar
- changed default graph endpoint to /me/inbox
  for messages extension
- bugfix with uncensor manifest resource 
  not declared
- hover state removal bugfix on browser action
  button for friends extension
- initial setup of 'pushed' button state for 
  friends extension browser action
- hack fix of floating popup chat windows
- extension packages added to build configuration

--- a/bitpop_specific/extensions/facebook_friends/css/sidebar.css
+++ b/bitpop_specific/extensions/facebook_friends/css/sidebar.css
@@ -67,11 +67,13 @@ span.leftSide {
   float: left;
   width: 185px;
   overflow:hidden;
+  height:100%;
 }
 
 #inner-wrap {
   float: left;
   margin-right: -30000px;
+  height: 100%;
 }
 .content-item {
   float:left;
@@ -124,4 +126,10 @@ span.leftSide {
 }
 .box, .box .antiscroll-inner {
   width: 100%;
+}
+#search-wrap, #search {
+  width: 100%;
+}
+#search-wrap {
+  margin-bottom: 5px;
 }
