--- a/bitpop_specific/extensions/facebook_friends/css/sidebar.css
+++ b/bitpop_specific/extensions/facebook_friends/css/sidebar.css
@@ -44,6 +44,7 @@ ul li img {
   vertical-align:middle;
   width: 32px;
   height: 32px;
+  padding-right: 5px;
 }
 ul li img.status {
   width: 12px;
@@ -127,9 +128,11 @@ span.leftSide {
 .box, .box .antiscroll-inner {
   width: 100%;
 }
-#search-wrap, #search {
-  width: 100%;
-}
 #search-wrap {
+  width: 100%;
+  padding-left:3px;
   margin-bottom: 5px;
+}
+#search {
+  width: 75%;
 }
