--- a/bitpop_specific/extensions/facebook_friends/css/chat_popup.css
+++ b/bitpop_specific/extensions/facebook_friends/css/chat_popup.css
@@ -38,6 +38,7 @@ p {
   list-style-type: none;
   word-wrap: break-word;
   font-size: 10px;
+  min-height: 27px;
 }
 #chat li.me {
   padding-left: 32px;
