Mac todos resolved, extensions improvements.
- Version 0.3.12.0
- (mac) changed facebook chat extension icon
- (mac) added fixed extension icons positioning
  with disabled dragging
- (mac) reverted back to not resize window on 
  sidebar show/hide
- (mac) better alignment on newtab page
- (win/mac) resolved scrollbar lag bug
- (win/mac) layout search and logout link to be
  on one line
- (win/mac) notification extension is updated
  right after the /me user id received

--- a/bitpop_specific/extensions/facebook_friends/css/sidebar.css
+++ b/bitpop_specific/extensions/facebook_friends/css/sidebar.css
@@ -131,8 +131,12 @@ span.leftSide {
 #search-wrap {
   width: 100%;
   padding-left:3px;
-  margin-bottom: 5px;
+  margin-bottom: 1em;
+  margin-top: 1em;
 }
 #search {
-  width: 75%;
+  width: 70%;
+}
+#logout a {
+  color: gray;
 }
