Extensions bugfix. Browser action positioning fixes.
- version 0.3.12.3
- (ext) reworked dropdown extension (seems to sync properly)
- (ext) problem with login windows solved
- (ext) add error notice while can not connect having a valid access token
- (ext) fixed background page bug in friends extension
- (win) fixed bug with extension button positioning
- (win) increased padding for chatbar

--- a/bitpop_specific/extensions/facebook_friends/css/sidebar.css
+++ b/bitpop_specific/extensions/facebook_friends/css/sidebar.css
@@ -138,5 +138,12 @@ span.leftSide {
   width: 70%;
 }
 #logout a {
-  color: gray;
+  color: #360000;
+}
+.error {
+  color: red;
+  font-size: small;
+  margin-left: 5px;
+  margin-right: 5px;
+  text-align: left;
 }
