--- a/bitpop_specific/extensions/facebook_friends/css/sidebar.css
+++ b/bitpop_specific/extensions/facebook_friends/css/sidebar.css
@@ -33,7 +33,7 @@ ul li {
   display: block;
   margin: 0;
   padding: 3px;
-  width: 179px;
+  width: 177px;
   /*background-color: white;
   */
   cursor: pointer;
@@ -60,7 +60,7 @@ span.leftSide {
 }
 #unavail { float: left; padding-left: 3px }
 #login { float:right; padding-right: 3px }
-#logout { float:right; clear: right; padding-right: 3px }
+#logout { float:right; clear: right; }
 .disabled { opacity: 0.4; }
 .clr { clear: both; overflow: hidden; height: 1px }
 
@@ -129,16 +129,20 @@ span.leftSide {
   width: 100%;
 }
 #search-wrap {
-  width: 100%;
+  width: 70%;
   padding-left:3px;
   margin-bottom: 1em;
   margin-top: 1em;
 }
 #search {
-  width: 70%;
+  width: 100%;
+}
+#logout {
+  line-height: 2em;
 }
 #logout a {
   color: #360000;
+  padding-right: 3px;
 }
 .error {
   color: red;
