--- a/bitpop_specific/extensions/facebook_friends/css/sidebar.css
+++ b/bitpop_specific/extensions/facebook_friends/css/sidebar.css
@@ -42,8 +42,8 @@ ul li:first-child { border-top: 1px solid #ccc }
 ul li:hover { background-color: #eee; }
 ul li img {
   vertical-align:middle;
-  width: 32px;
-  height: 32px;
+  width: 25px;
+  height: 25px;
   padding-right: 5px;
 }
 ul li img.status {
@@ -153,7 +153,7 @@ span.leftSide {
 }
 
 .head {
-  background-color: #ccc;
+  background: -webkit-linear-gradient(top, #f6f8f9 0%,#e5ebee 50%,#d7dee3 51%,#f5f7f9 100%);
   padding: 3px 4px;
   color: black;
   border-bottom: solid 1px white;
