--- a/bitpop_specific/extensions/facebook_friends/css/chat_popup.css
+++ b/bitpop_specific/extensions/facebook_friends/css/chat_popup.css
@@ -64,7 +64,7 @@ p {
 */
 .box, .box .antiscroll-inner {
   width: 203px;
-  height: 282px;
+  height: 287px;
   margin: 0;
   padding: 0;
 }
@@ -119,3 +119,15 @@ p {
   cursor: pointer;
 }
 
+.composing-notification {
+  /*-webkit-box-shadow:  2px 2px 10px 0px rgba(0, 0, 0, 0.6);
+   */
+  -webkit-border-radius: 5px;
+  background-color: rgba(240, 240, 240, 1);
+  border: 1px solid #a8a8a8;
+  padding: 3px 5px;
+  font-size: 10px;
+  color: #666;
+  display: none;
+  margin: 3px;
+}
