--- a/bitpop_specific/extensions/facebook_friends/fancy-settings/source/custom.css
+++ b/bitpop_specific/extensions/facebook_friends/fancy-settings/source/custom.css
@@ -2,3 +2,6 @@
 // Add your own style rules here, not in css/main.css
 // or css/setting.css for easy updating reasons.
 */
+
+@import url("css/button.css");
+@import url("css/checkbox.css");
