--- a/bitpop_specific/extensions/facebook_friends/css/chat_popup.css
+++ b/bitpop_specific/extensions/facebook_friends/css/chat_popup.css
@@ -44,6 +44,7 @@ textarea#msg {
   clear: left;
   resize: none;
   font-size: 11px;
+  font-family: "lucida grande",tahoma,verdana,arial,sans-serif;
   margin-bottom: 3px;
 }
 
